fix the mobile view and button vertical alignment in home page view.

--- a/static/customstyle.css
+++ b/static/customstyle.css
@@ -16,6 +16,11 @@ input, select, option {
     margin-top: 0.75rem !important;
 }
 
+.container_footer {
+    position: absolute;
+    bottom: 1rem;
+}
+
 /*.navbar {*/
     /*margin-bottom: 0 !important;*/
 /*}*/
